# scion

./: Cargo.toml  README.md
examples/bomberman/: main.rs
examples/feature-showcase/: main.rs  scene.rs
examples/feature-showcase/assets/: demo-ply.json  demo-ply2.json  demo-ply3.json  demo-ply4.json  demo-ply5.json  test-lvl.json  test-lvl2.json  test-lvl3.json  test-lvl4.json  test-lvl5.json
examples/jezzball/: main_scene.rs  utils.rs
examples/jezzball/systems/: ball.rs  lines.rs
examples/new-bark-town/: character_control_system.rs  scene.rs
examples/pixel-adventures/: scene.rs
examples/starlight-1961/: level_scene.rs  main_menu_scene.rs
examples/starlight-1961/assets/: lvl1.scion  space_ship.scion
examples/starlight-1961/scripts/: background_parallax.rs
examples/taquin/: main.rs
examples/tetris/: scene.rs
examples/tetris/systems/: move_system.rs  piece_system.rs  score_system.rs
src/: application.rs
src/config/: window_config.rs
src/core/: application_builder.rs  audio_controller.rs  command_buffer.rs  mod.rs  scheduler.rs  scion_runner.rs  state.rs  world.rs
src/core/components/: mod.rs
src/core/resources/: asset_manager.rs  audio.rs  color_picking.rs  font_atlas.rs  mod.rs  window.rs
src/core/systems/: animations_system.rs  asset_ref_resolver_system.rs  collider_systems.rs  color_picking_system.rs  default_camera_system.rs  focus_systems.rs  hide_propagation_system.rs  missing_ui_component_system.rs  mod.rs  parent_transform_system.rs  ui_button_systems.rs  ui_input_systems.rs  ui_text_system.rs
src/utils/: mod.rs
(+45 files in other folders)
