[package]
name = "scion"
version = "0.8.0"
authors = ["jerthz <jeremy.thulliez@gmail.com>"]
edition = "2018"
description = "Game making library on top of wgpu, winit, hecs"
documentation = "https://docs.rs/scion"
keywords = ["game", "library", "engine"]
repository = "https://github.com/grzi/scion/"
license = "MIT OR Apache-2.0"
resolver = "2"

[features]
hot-reload = []

[dependencies]
atomic_refcell = "0.1.13"
hecs = "0.10.5"
downcast-rs = "2.0.2"

# window & rendering
winit = {version = "0.30.12", features = ["rwh_05"]}
wgpu = { version = "23.0.1" }
ab_glyph = "0.2.32"
futures = "0.3"

# maths
ultraviolet = "0.10"
geo-types = "0.7.17"
geo-clipper = "0.9.0"

# serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bytemuck = { version = "1.24", features = ["derive"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }
base64 = "0.22.0"

# logging
log = { version = "0.4.28", features = ["serde"] }
fern = { version = "0.7.1", features = ["colored"] }

# sound
rodio = "0.21.1"

[profile.dev.package]
image = { opt-level = 3 }
png = { opt-level = 3 }
bitflags = { opt-level = 3 }
bytemuck = { opt-level = 3 }
byteorder = { opt-level = 3 }
miniz_oxide = { opt-level = 3 }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dev-dependencies]
rand = "0.8.4"